--- a/index.html
+++ b/index.html
@@ -111,6 +111,59 @@
     <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
     <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
   </div>
+<style>
+  /* Container for video and overlay */
+  .video-background {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* full viewport height */
+    overflow: hidden;
+  }
+
+  /* Video fills the container */
+  .video-background video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    object-fit: cover;
+  }
+
+  /* White overlay with 20% opacity */
+  .video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0.2; /* 20% opacity */
+    z-index: 2;
+  }
+
+  /* Your content above overlay */
+  .content {
+    position: relative;
+    z-index: 3;
+    color: black; /* or whatever fits */
+  }
+</style>
+
+<div class="video-background">
+  <video autoplay muted loop>
+    <source src="imamhussainas.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+  <div class="video-overlay"></div>
+  <div class="content">
+    <h1>Your content here</h1>
+  </div>
+</div>
 
   <footer>
     “In every tent of Hussain (ع), sincerity matters more than size.”
