--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
 
   <header>
-    <img src="mylogo.png" alt="Maukib Kashmir Logo" width="140" height="70" class="logo" />
+    <img src="mylogo.png" alt="Maukib Kashmir Logo" width="349px" height="72" class="logo" />
   </header>
 
   <h2>COMING SOON</h2>
