--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <div class="socials">
     <a href="https://instagram.com/maukibkashmir" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://facebook.com/maukibkashmir" target="_blank"><i class="fab fa-facebook"></i></a>
     <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
   </div>
 
