--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
 
   <header>
     <img src="mylogo.png" alt="Maukib Kashmir Logo" class="logo" />
+    .logo {
+  width: 160px;        /* Adjust size as needed */
+  height: auto;        /* This keeps the aspect ratio */
+  display: block;
+  margin: 0 auto;
+}
   </header>
 
   <h2>COMING SOON</h2>
