--- a/index.html
+++ b/index.html
@@ -130,20 +130,115 @@
       margin-top: 30px;
       margin-bottom: 20px;
     }
-     .logo {
-      width: 200px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-      max-width: 90%;
-    }
+     /* Font and color setup */
+body {
+  font-family: 'Poppins', sans-serif;
+  color: #0D422E;
+}
+
+/* Navbar layout */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 40px;
+  background-color: white;
+}
+
+/* Logo */
+.nav-logo {
+  height: 50px;
+  width: auto;
+}
+
+/* Nav Links */
+.nav-links {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  align-items: center;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: #0D422E;
+  font-weight: 400;
+  position: relative;
+  padding-bottom: 5px;
+  transition: all 0.3s ease;
+}
+
+.nav-links li a.active {
+  font-weight: 700;
+}
+
+.nav-links li a.active::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #B5F47D;
+  bottom: 0;
+  left: 0;
+  border-radius: 2px;
+}
+
+/* CTA buttons */
+.nav-cta {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.volunteer-btn {
+  display: flex;
+  align-items: center;
+  background-color: #B5F47D;
+  padding: 8px 12px;
+  text-decoration: none;
+  border-radius: 5px;
+  color: #0D422E;
+  font-size: 13px;
+}
+
+.volunteer-btn img {
+  width: 24px;
+  margin-right: 8px;
+}
+
+.donate-btn {
+  background-color: #B5F47D;
+  padding: 10px 18px;
+  border-radius: 3px;
+  color: #0D422E;
+  text-decoration: none;
+  font-weight: 500;
+}
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   </style>
 </head>
 <body>
-
-  <header>
-    <img src="mylogo.png" alt="Maukib Kashmir Logo" class="logo" />
-  </header>
+ <nav class="navbar">
+  <div class="logo-container">
+    <img src="mylogo.png" alt="Maukib Kashmir Logo" class="nav-logo" />
+  </div>
+  <ul class="nav-links">
+    <li><a href="index.html" class="active">HOME</a></li>
+    <li><a href="what-we-do.html">WHAT WE DO</a></li>
+    <li><a href="updates.html">UPDATES</a></li>
+    <li><a href="contact.html">CONTACT US</a></li>
+  </ul>
+  <div class="nav-cta">
+    <a href="https://forms.gle/BAH9VfokMiuQFMBH9" class="volunteer-btn">
+      <img src="hand-icon.png" alt="Volunteer" />
+      <div>
+        <small>WANT TO JOIN US?</small><br />
+        <strong>BECOME A VOLUNTEER</strong>
+      </div>
+    </a>
+    <a href="donate.html" class="donate-btn">DONATE</a>
+  </div>
+</nav>
 
   <h2>COMING SOON</h2>
   <h1>
