--- a/index.html
+++ b/index.html
@@ -137,20 +137,25 @@ body {
 }
 
 /* Navbar layout */
-.navbar {
+.navbar  {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 40px;
+  padding: 25px 40px;
   background-color: white;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 /* Logo */
 .nav-logo {
-  height: 50px;
+  height: 55px;
   width: auto;
 }
-
+.volunteer-btn img {
+  height: 20px;
+  margin-right: 8px;
+}
 /* Nav Links */
 .nav-links {
   display: flex;
@@ -199,11 +204,6 @@ body {
   border-radius: 5px;
   color: #0D422E;
   font-size: 13px;
-}
-
-.volunteer-btn img {
-  width: 24px;
-  margin-right: 8px;
 }
 
 .donate-btn {
